Mon Mar 20 21:10:53 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: if no "C" locale setting found for name, set it
	  to the filename or "Unknown" when saving.  This prevents problem
	  with created files.  Also eliminate a possible buffer overrun.

Mon Mar 20 20:36:35 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: Apply patch from miguel made to gnome-libs-1-0,
	  fix segfault when loading illegal files by correctly setting state
	  after ignore.  also correctly set state after premature end of line
	
	* gnome-dentry.c: when saving names and comments, save them to the
	  default (no language) first just in case there was no setting,
	  fixes first part of #7300

2000-02-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-util.c (g_concat_dir_and_file): dir or file being NULL is
	an error.

2000-02-18 Elliot Lee <sopwith@redhat.com>
	* gnome-dentry.c: Try just looking for KDE icons in various common places instead of using
	KDE_ICONDIR define.

Sun Jan 30 12:49:59 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: fix two double free errors by applying a patch from
	  Peter Wainwright <prw@wainpr.demon.co.uk> and fix a small leak
	  in _unref

Thu Jan 20 00:07:37 2000  George Lebl <jirka@5z.com>

	* gnome-mime.[ch]: add a function gnome_uri_extract_filename,
	  which will take a single uri and return a newly allocated
	  string with a local filename or NULL if it's not file: and
	  local.  Use this in extract_filenames so that we actually
	  get real files for things that specify hostname too

	* gnome-ditem.c: use gnome_uri_extract_filename to test for
	  something being a local file and use it to extract the filename
	  itself.  If we actually append ".directory" and read the file,
	  stat it again to get the correct mtime.  Store full path in
	  location.  Make sure the type is "Directory" if and only if
	  the loaded file is a ".directory".  Recognize "<dir>/.directory"
	  as a directory file as well.  Add _() around the g_warning